...
    <string name="activity_training_statistics_name">Статистика тренировки</string>
    <string name="first_training">Первая тренировка</string>
    <string name="second_training">Вторая тренировка</string>
    <string name="activity_training_name">Тренировка</string>
    <string name="time_left">осталось времени</string>
    <string name="next">Следующий</string>
    <string name="stop">Закончить</string>
    <string name="activity_start_page_name">Начальная страница</string>
    <string name="activity_create_presentation_name">Добавление презентации</string>
    <string name="activity_edit_presentation_name">Добавление новой презентации</string>
    <string name="time_limit">Ограничение времени на доклад (минут)</string>
    <string name="notifications">Уведомления</string>
    <string name="presentation_date">Дата доклада</string>
...
    <string name="pref_header_general">Основные</string>

    <string name="pref_title_enable_statistics">Включить анализ статистики</string>
    <string name="pref_description_enable_statistics">Отображение графиков после выступления
    </string>
    <string name="pref_title_enable_deb_pres">Включить тестовые презентации</string>
    <string name="deb_speech_audio_key">deb_speech_audio</string>
    <string name="notifications_key">notifications_new_message</string>
    <string name="speed_key">speed_key</string>
    <string name="pref_title_enable_deb_speech_audio">Включить тестовую звуковую дорожку</string>
    <string name="deb_pres">Отладочная презентация</string>
    <string name="deb_pres_name">making_presentation.pdf</string>
    <string name="first_debug_presentation_name">making_first_presentation</string>
    <string name="second_debug_presentation_name">making_second_presentation</string>
    <string name="set_number_into_NP">Set the passed number into the NumberPicker</string>
    <string name="first_debug_time">01 min: 00 sec</string>
    <string name="second_debug_time">02 min: 00 sec</string>
    <string name="edit">"Редактировать"</string>

    <string name="making_presentation">making_presentation</string>

    <string name="pdf_format">.pdf</string>

    <string name="pref_title_display_name">Имя пользователя</string>
    <string name="pref_default_display_name">John Smith</string>

...
    <string name="further">Далее</string>
    <string name="save">Сохранить</string>

    <string name="change_presentation_task">"Редактировать презентацию "</string>
    <string name="change">"Редактировать"</string>
    <string name="no">"Нет"</string>
    <string name="remove">"Удалить"</string>

    <!-- For Change Presentation -->
    <string name="leave">"Оставить"</string>
    <string name="request_for_remove_presentation">"Вы действительно хотите удалить презентацию "</string>
    <string name="name_of_pres">Название презентации: </string>
    <string name="cur_training_title">Текущая тренировка: </string>
...
    <string name="pie_chart_tittle">Наиболее популярные слова</string>
    <string name="error_accessing_the_cur_training_data">Ошибка в получении доступа к данным текущей тренировки</string>
    <string name="error_accessing_the_training_list">Ошибка в получении доступа к списку тренировок</string>

    <string name="error_accessing_training_slides">Ошибка в получении доступа слайдам тренировки</string>
    <string name="error_accessing_the_training_list_or_presentation_data">Ошибка в получении доступа к списку тренировок или presentationData</string>
    <string name="test_time">00:30</string>
    <string name="pause">Пауза</string>
    <string name="continue_">Продолжить</string>

    <string name="setNumber_function_information">Set the passed number into the NumberPicker</string>
    <string name="you_dont_end_training">Вы не завершили данную тренировку.</string>
    <string name="continue_training">Продолжить тренировку</string>
...
    <string name="start_training">Начать тренировку?</string>
    <string name="yes">ДА</string>
    <string name="firstSyncFlag">first_sync_flag</string>
    <string name="pdfErrorMsg">File not in PDF format.\nPlease choose another.</string>
    <string name="audio_analysis">Анализ аудио</string>
    <string name="closeRatingInformation">Ок</string>
    <string name="assessment_for_training_title">Оценка за тренировку вычислиется с учетом пяти критериев: </string>
    <string name="regulations_description">Проверка успешности попадания в условия временного ограничения.\n\n\t\tdx - модуль разницы между временем тренировки и ограничением на доклад.\n\t\tx0 - ограничение на доклад. </string>
    <string name="pace_description">Скорость речи на каждом из слайдов.\n\n\t\tdy - дисперсия скорости речи на слайдах.</string>
    <string name="time_description">Длительность тренировки по слайдам.\n\n\t\tdz - дисперсия времени на слайдах.</string>
    <string name="pause_description">Доля пауз по слайдам. Учитывается при вычислении оценки, если длительность пауз больше половины тернировки.\n\n\t\tdp - доля пауз в процентах</string>
    <string name="parasites_description">Чем больше слов паразитов в речи, тем меньше оценка за данный критерий.\n\n\t\tdu - количество слов паразитов.\n\t\t20 - максимальный балл за критерий</string>
    <string name="final_assessment_value">Финальным значение оценки является среднее арифметическое перечисленных критериев: \n</string>
...
