...
                    android:layout_height="wrap_content"
                    android:text="@string/time_limit"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/trainingTime"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:inputType="time"
                    android:textAlignment="center"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/training"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/activity_train_name"
                    android:layout_weight="1" />

            </LinearLayout>
...
