...
    android:background="@android:color/white"
    android:foreground="@drawable/card_foreground"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <ImageView
        android:id="@+id/image_view_presentation_start_page_row"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
...
