...
                    android:layout_weight="1"
                    android:text="@string/earnings_of_training"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="19sp" />

                <ImageView
                    android:id="@+id/question"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/question" />
...
